--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKPCFhz3bEYa+PxJYc5Fl8",
+      "authorship_tag": "ABX9TyMD99CBeZGXEFFC54GH92f1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,86 +28,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "E0PgVaU-dHK5",
-        "outputId": "bbf012b2-cb66-491d-b1b3-e5eaa48b7909"
+        "id": "QbaTXlAwdCJA",
+        "outputId": "31310035-3519-4026-a7ea-81448e0fad19"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 0.8044692737430168\n",
-            "\n",
-            "Confusion Matrix:\n",
-            " [[90 15]\n",
-            " [20 54]]\n",
-            "\n",
-            "Classification Report:\n",
-            "               precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.82      0.86      0.84       105\n",
-            "           1       0.78      0.73      0.76        74\n",
-            "\n",
-            "    accuracy                           0.80       179\n",
-            "   macro avg       0.80      0.79      0.80       179\n",
-            "weighted avg       0.80      0.80      0.80       179\n",
-            "\n"
+            "Intercept: 0.0\n",
+            "Confirmed: 0.9999999999999997\n",
+            "Deaths: -0.9999999999999984\n",
+            "Active: -0.9999999999999996\n",
+            "New cases: -6.00908212078366e-15\n",
+            "New deaths: 1.7727529513789086e-13\n",
+            "Predictions: [14500. 36500.]\n"
           ]
         }
       ],
       "source": [
         "import pandas as pd\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "import numpy as np\n",
-        "# 1. Load the data\n",
-        "df = pd.read_csv('/content/titanic.csv')\n",
+        "from sklearn.linear_model import LinearRegression\n",
         "\n",
-        "# 2. Drop irrelevant or redundant columns\n",
-        "df.drop(columns=['class', 'who', 'adult_male', 'deck', 'embark_town', 'alive', 'alone'], inplace=True, errors='ignore')\n",
+        "# Select features and target\n",
+        "features = ['Confirmed', 'Deaths', 'Active', 'New cases', 'New deaths']\n",
+        "target = 'Recovered'\n",
         "\n",
-        "# 3. Handle missing values\n",
-        "df['age'] = df['age'].fillna(df['age'].median())\n",
-        "df['embarked'] = df['embarked'].fillna(df['embarked'].mode()[0])\n",
+        "# Load the dataset\n",
+        "df = pd.read_csv(\"/content/country_wise_latest.csv\")\n",
         "\n",
-        "# 4. Encode categorical columns\n",
-        "label_encoders = {}\n",
-        "for col in ['sex', 'embarked']:\n",
-        "    le = LabelEncoder()\n",
-        "    df[col] = le.fit_transform(df[col])\n",
-        "    label_encoders[col] = le\n",
+        "# Drop rows with missing values\n",
+        "df = df[features + [target]].dropna()\n",
         "\n",
-        "# 5. Feature matrix and target\n",
-        "X = df.drop('survived', axis=1)\n",
-        "y = df['survived']\n",
+        "# Train the model\n",
+        "X = df[features]\n",
+        "y = df[target]\n",
+        "model = LinearRegression()\n",
+        "model.fit(X, y)\n",
         "\n",
-        "# 6. Split data\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "# Output beta values\n",
+        "print(\"Intercept:\", model.intercept_)\n",
+        "for feature, coef in zip(features, model.coef_):\n",
+        "    print(f\"{feature}: {coef}\")\n",
         "\n",
-        "# 7. Standardize numerical features\n",
-        "scaler = StandardScaler()\n",
-        "X_train_scaled = scaler.fit_transform(X_train)\n",
-        "X_test_scaled = scaler.transform(X_test)\n",
+        "# Predict sample values\n",
+        "sample = pd.DataFrame({\n",
+        "    'Confirmed': [20000, 50000],\n",
+        "    'Deaths': [500, 1500],\n",
+        "    'Active': [5000, 12000],\n",
+        "    'New cases': [300, 600],\n",
+        "    'New deaths': [10, 20]\n",
+        "})\n",
         "\n",
-        "# 8. Train logistic regression model\n",
-        "model = LogisticRegression()\n",
-        "model.fit(X_train_scaled, y_train)\n",
-        "\n",
-        "# 9. Predictions and evaluation\n",
-        "y_pred = model.predict(X_test_scaled)\n",
-        "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
-        "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
-        "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))\n",
-        "\n"
+        "predictions = model.predict(sample)\n",
+        "print(\"Predictions:\", predictions)\n"
       ]
     }
   ]
